@@ -1,17 +1,16 @@
-#/usr/bin/perl
+#!/usr/bin/perl
 
 use strict;
+
+# For PRIVATE Module::Install extensions
+use lib 'private-lib';
+
 use inc::Module::Install;
-use File::Slurp;
 
 all_from('lib/Module/Install/CustomInstallationPath.pm');
 
 auto_set_bugtracker;
 githubmeta;
-
-include(
-  'File::Slurp' => 0,
-);
 
 requires(
   'File::HomeDir' => 0,
@@ -24,10 +23,6 @@ test_requires(
 license 'gpl2';
 auto_license(holder => 'David Coppit');
 
-WriteAll();
+enable_verbose_cpan_testing();
 
-if (auto_tester) {
-  my $code = read_file('Makefile');
-  $code =~ s/TEST_VERBOSE\s*=\s*0/TEST_VERBOSE=1/ or die "Couldn't enable verbose mode in Makefile";
-  write_file('Makefile', $code);
-}
+WriteAll();
